@@ -6,6 +6,7 @@
     <meta id="viewport" name="viewport"/>
     <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
     <script src="../js/common.js"></script>
+    <script src="../js/preview-mmshop.js"></script>
     <script src="../js/mmshop.js"></script>
     <link rel="stylesheet" href="../css/mmshop.css">
     <link rel="stylesheet" href="../css/download-banner-1.css">
@@ -118,6 +119,28 @@
 
     <div class="products-div">
         <a href="shangpinxq.html?id={{ product }}">
+            <div class="product-info"></div>
+            <img class="product-show" src="{{ pic_path }}?imageMogr2/thumbnail/600/format/jpg/quality/100/crop/x600"/>
+        </a>
+
+        <div class="pro-price-div">
+            <span class="sale-price">￥{{ agent_price }}</span>
+            <span class="std-price">/￥{{ std_sale_price }}</span>
+        </div>
+        <div class="pro-name-div">
+            <span class="pro-name">{{ name }}</span>
+        </div>
+    </div>
+
+
+</script>
+
+<!-- 同款页面dom结构-->
+<script type="text/html" id="model_dom">
+
+
+    <div class="products-div">
+        <a href="../tongkuan.html?id={{ model }}">
             <div class="product-info"></div>
             <img class="product-show" src="{{ pic_path }}?imageMogr2/thumbnail/600/format/jpg/quality/100/crop/x600"/>
         </a>
