@@ -1,3 +1,5 @@
+######## 2016-04-06 #########
+alter table flashsale_cushops_detail add column model int(11) default 0;
 ######## 2016-04-02 ########
 DROP TABLE IF EXISTS `flashsale_package`;
 CREATE TABLE `flashsale_package` (
